<?xml version="1.0"?>
<package format="3">
  <name>joint_jogger_gui</name>
  <version>0.1.0</version>
  <description>RViz2 panel to jog joints using velocity commands (+/- buttons).</description>
  <maintainer email="fb@cobod.com">Filippo Bosi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <rviz plugin="resource/joint_jogger_gui_plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>